[package]
name = "reverso"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", features = ["full"] }
matchit = "0.9.2"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
