[package]
name = "reverso"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = { version = "1.11.1", features = ["serde"] }
http = "1.4.0"
http-body-util = { version = "0.1.3", features = ["full"] }
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
matchit = "0.9.2"
tokio = { version = "1.52.3", features = ["full"] }
tower = { version = "0.5.3", features = ["full"] }
tracing = "0.1.44"
